# hwnode

./: .gitignore  README.md  hwnode_block.py  param_check.py  pyproject.toml
experiments/: eval_suite.py  extreme_compression_suite.py  mlp_param_sweep.py  pendulum_comparison.py  pendulum_fixed_comparison.py  pendulum_rescue_comparison.py  taylor_vs_chebyshev.py
hwnode/: __init__.py  agent.py  baseline.py  config.py  model.py  run.py  train.py
tests/: test_model.py
