[project]
name = "hwnode"
version = "0.1.0"
description = "Hammerstein-Wiener Neural ODE blocks for reinforcement learning"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "gymnasium>=1.0",
    "wandb>=0.16",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
